Bug 119785 - RTL: DOC: closing parenthesis is displayed as LTR in embedded document
Summary: RTL: DOC: closing parenthesis is displayed as LTR in embedded document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Jonathan Clark
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks: EMF-WMF DOC-RTL
  Show dependency treegraph
 
Reported: 2018-09-10 14:24 UTC by Xisco Faulí
Modified: 2024-09-20 19:10 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.2 (130.96 KB, image/png)
2018-09-10 14:24 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-09-10 14:24:07 UTC
Created attachment 144772 [details]
comparison MSO 2010 and LibreOffice 6.2

This is a follow-up of bug 89224

Steps to reproduce:
1. Open attachment 113226 [details] from bug 89224

Observed behaviour: The closing parenthesis in displayed as LTR. See attached image.

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: 433fce6571d4b9121374047324a7d2d2722ac3e4
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: threaded

and

LibreOffice 3.3.0 
OOO330m19 (Build:6)
tag libreoffice-3.3.0.4
Comment 1 Xisco Faulí 2018-09-10 14:25:30 UTC
@Mark Hung, Since you fixed bug 60533, I thought you could be interested in this issue...
Comment 2 Khaled Hosny 2018-09-10 14:58:35 UTC
The LibreOffice version is the image has seriously broken Arabic text; the spacing is incorrect, lots of letters overlap and even complete words are misplaced. Most probably something is seriously broken with layout of fallback fonts.
Comment 3 Eyal Rozenberg 2018-09-30 16:11:05 UTC
(In reply to Khaled Hosny from comment #2)
It doesn't look like that to me

(In reply to Xisco Faulí from comment #0)
The attachment is very weird, it seems to have a WMF object embedded in it. I'm not even sure it's LO that's rendering that text.

Can you reproduce this bug with a simpler document?
Comment 4 Buovjaga 2018-10-03 15:43:31 UTC
Confirmed.

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 36befb3aca96907a14e71e82497dbb8f03ead5ab
CPU threads: 8; OS: Linux 4.18; UI render: default; VCL: gtk3_kde5; 
Locale: fi-FI (fi_FI.UTF-8); Calc: threaded
Built on 3 October 2018
Comment 5 QA Administrators 2019-10-04 03:05:11 UTC Comment hidden (obsolete)
Comment 6 Xisco Faulí 2019-10-04 08:00:40 UTC
Still reproducible in

Version: 6.4.0.0.alpha0+
Build ID: c9336bfb6bbf6d73d3f23c124262ade30133448d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Mark Hung, I thought you might be interested in this issue...
Comment 7 LaithGlass 2020-11-17 08:03:01 UTC Comment hidden (spam)
Comment 8 HermanHill 2020-11-26 15:53:09 UTC Comment hidden (obsolete, spam)
Comment 9 JustinWilliams 2020-11-27 05:58:11 UTC Comment hidden (obsolete, spam)
Comment 10 JamesAnderson 2020-11-28 05:00:26 UTC Comment hidden (obsolete, spam)
Comment 11 RichardDavidson 2020-11-30 07:51:01 UTC Comment hidden (obsolete, spam)
Comment 12 SamanthaPerkins 2020-12-01 06:10:07 UTC Comment hidden (obsolete, spam)
Comment 13 QA Administrators 2022-12-05 03:32:54 UTC Comment hidden (obsolete)
Comment 14 Xisco Faulí 2022-12-05 09:52:55 UTC
Still reproducible in

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ebe151d919a454f98c36013245bca9eb41d92707
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

@Kevin, I thought you might be interested in this issue
Comment 15 Commit Notification 2024-09-18 04:00:00 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/3bd4a797724cf432d09a7d8ffe5f4a53a1e7c78d

tdf#119785 Implement the EMF TA_RTLREADING alignment flag

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Commit Notification 2024-09-20 19:03:33 UTC
Jonathan Clark committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0aff60231011401fd1e477bdfc40cb03c5c32fdf

tdf#119785 Implement the EMF TA_RTLREADING alignment flag

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.