tdf#119785 Implement the EMF TA_RTLREADING alignment flag

EMF has two ways to indicate that text should be treated as RTL:

- The ExtTextOut ETO_RTLREADING flag
- The SetTextAlign TA_RTLREADING flag

Previously, only the former was implemented. This change implements the
latter.

Change-Id: If1023b4a0a3b6eb2ce47d2b764edbfd1a5c0dd5a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173579
Reviewed-by: Jonathan Clark <jonathan@libreoffice.org>
Tested-by: Jenkins